Place Order Edition complete without edition complete error check for over amount

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name=".ui.PlaceOrderSecond" android:label="Place an Order"
             android:screenOrientation="landscape"></activity>
         <activity android:name=".ui.ComplainReport" android:label="Place an Order"></activity>
+        <activity android:name=".ui.ReamainVan" android:label="Reamin Stock"></activity>
 
     </application>
 
