Bill creating section added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         <activity android:name=".ui.ComplainReport" android:label="Place an Order"></activity>
         <activity android:name=".ui.ReamainVan" android:label="Reamin Stock"></activity>
         <activity android:name=".ui.PlaceOrderSecond2" android:label="Reamin Stock"></activity>
-
+        <activity android:name=".ui.PlaceOrderBill" android:label="Your Bill"></activity>
 
     </application>
 
