--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         <activity android:name=".ui.ReamainVan" android:label="Reamin Stock"></activity>
         <activity android:name=".ui.PlaceOrderSecond2" android:label="Reamin Stock"></activity>
         <activity android:name=".ui.PlaceOrderBill" android:label="Your Bill"></activity>
-
+        <activity android:name=".ui.MakePayment" android:label="Recopy Your Bill"></activity>
     </application>
 
 </manifest>
