--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="group12.ucsc.agentmate" >
     <uses-permission android:name="android.permission.SEND_SMS" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -34,6 +35,8 @@
         <activity android:name=".ui.RePrintBill" android:label="Recopy Your Bill"></activity>
         <activity android:name=".ui.GetReturnItems" android:label="Get Return Items"></activity>
         <activity android:name=".ui.Login_Activity" android:label="@string/app_name"></activity>
+        <activity android:name=".ui.GetStoreQty" android:label="Check the Store"></activity>
+        <activity android:name=".ui.UnLoadData" android:label="Sync Data To PC"></activity>
 
     </application>
 
