--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="group12.ucsc.agentmate" >
     <uses-permission android:name="android.permission.SEND_SMS" />
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -37,6 +38,19 @@
         <activity android:name=".ui.Login_Activity" android:label="@string/app_name"></activity>
         <activity android:name=".ui.GetStoreQty" android:label="Check the Store"></activity>
         <activity android:name=".ui.UnLoadData" android:label="Sync Data To PC"></activity>
+        <service
+            android:name=".ui.LocationService"
+            android:enabled="true"
+            android:exported="false" >
+        </service>
+
+        <receiver android:name=".ui.MessageReceiver">
+            <intent-filter>
+                <action android:name="group12.tutorialspoint.CUSTOM_INTENT">
+                </action>
+            </intent-filter>
+        </receiver>
+
 
     </application>
 
