Connect to MySensor Network successfull with Hardcode login

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -41,6 +43,11 @@
         <activity android:name=".ui.UnLoadData" android:label="Sync Data To PC"></activity>
         <service
             android:name=".ui.LocationService"
+            android:enabled="true"
+            android:exported="false" >
+        </service>
+        <service
+            android:name=".ui.NetSync"
             android:enabled="true"
             android:exported="false" >
         </service>
