Connect to MySensor Network successfull with Hardcode login and data loss at Service restart is solved via data.txt file

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,7 +56,17 @@
             <intent-filter>
                 <action android:name="group12.tutorialspoint.CUSTOM_INTENT">
                 </action>
+                <action android:name="group12.tutorialspoint.PaymentIntent">
+                </action>
+                <action android:name="group12.tutorialspoint.Order">
+                </action>
+                <action android:name="group12.tutorialspoint.StartLoc">
+                </action>
+                <action android:name="group12.tutorialspoint.StartSync">
+                </action>
+
             </intent-filter>
+
         </receiver>
     </application>
 </manifest>
