--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/logomate"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
         <activity
             android:name=".ui.Loader"
-            android:label="Loading....." >
+            android:label="AgentMate" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
